# fallow-rs_fallow

./: .clippy.toml  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  action.yml  plugin-schema.json  schema.json
.claude/agents/: ci-formats-reviewer.md  cli-output-reviewer.md  github-action-reviewer.md  gitlab-ci-reviewer.md  json-output-reviewer.md  rust-reviewer.md  user-panel.md  vscode-reviewer.md
.claude/rules/: cli-crate.md  code-quality.md  core-crate.md  detection.md  mcp-server.md  plugins.md  (+1 more)
.github/: zizmor.yml
benchmarks/: bench-ci.sh  bench.mjs
ci/: gitlab-ci.yml
crates/config/: Cargo.toml
crates/config/src/: config.rs  external_plugin.rs  framework.rs  workspace.rs
crates/config/src/config/: format.rs  mod.rs  resolution.rs  rules.rs  used_class_members.rs
crates/config/src/workspace/: mod.rs  package_json.rs  parsers.rs
crates/extract/: Cargo.toml
crates/extract/src/: astro.rs  cache.rs  complexity.rs  css.rs  html.rs  inventory.rs  lib.rs  mdx.rs  parse.rs  sfc.rs  sfc_template.rs  suppress.rs  template_usage.rs  visitor.rs
crates/extract/src/cache/: conversion.rs  tests.rs  types.rs
crates/extract/src/sfc_template/: angular.rs  mod.rs  shared.rs  svelte.rs
crates/extract/src/tests/: mod.rs  regex_compile.rs  sfc.rs
crates/extract/src/tests/js_ts/: classes.rs  complexity.rs  dynamic_imports.rs  exports.rs  jsdoc.rs  jsx_retry.rs  mod.rs  unused_bindings.rs
crates/extract/src/visitor/: declarations.rs  helpers.rs  mod.rs  tests.rs  visit_impl.rs
crates/graph/: Cargo.toml
crates/graph/src/: graph.rs  lib.rs  project.rs  resolve.rs
crates/graph/src/graph/: build.rs  cycles.rs  mod.rs  narrowing.rs  re_exports.rs  reachability.rs  types.rs
crates/graph/src/graph/re_exports/: mod.rs  propagate.rs  tests.rs
crates/graph/src/resolve/: dynamic_imports.rs  fallbacks.rs  mod.rs  path_info.rs  re_exports.rs  require_imports.rs  specifier.rs  static_imports.rs  tests.rs  types.rs  upgrades.rs
crates/graph/tests/: cross_platform.rs
decisions/: README.md
docs/: backwards-compatibility.md  output-schema.json  positioning.md
scripts/: sync-npm-versions.sh
(+335 files in other folders)
