[package]
name = "fallow-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration types for the fallow dead code analyzer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
json_comments = { workspace = true }
toml = { workspace = true }
schemars = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }

[lints]
workspace = true
